--- a/resources/homework/hw4/Predict_Particle.ipynb
+++ b/resources/homework/hw4/Predict_Particle.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(calculate_MSE(games))"
+    "print(calculate_MSE(waveforms))"
    ]
   },
   {
