--- a/resources/homework/hw7/calculator.ipynb
+++ b/resources/homework/hw7/calculator.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "In the top left corner, in the File menu, select Download as Python (.py). \n",
     "\n",
-    "You must save your file as `calculator.py` for the Gradescope autograder to run. Then, upload this file to the assignment called Homework 4 Code on Gradescope. Problems 4b, 4c, and 5 will be autograded, so you don't need to turn in any written explanation for these questions."
+    "You must save your file as `calculator.py` for the Gradescope autograder to run."
    ]
   },
   {
